edit reviews and add achievements

--- a/index.html
+++ b/index.html
@@ -350,19 +350,14 @@
         </div>
         <div class="achievements-grid">
           <div class="achievement-card">
-            <div class="achievement-icon">🏅</div>
-            <h3>Лучший воспитатель года</h3>
-            <p>2023</p>
-          </div>
-          <div class="achievement-card">
-            <div class="achievement-icon">📜</div>
-            <h3>Сертификат за инновации</h3>
-            <p>2022</p>
-          </div>
-          <div class="achievement-card">
             <div class="achievement-icon">💝</div>
             <h3>Благодарность от родителей</h3>
             <p>Множественные</p>
+          </div>
+          <div class="achievement-card">
+            <div class="achievement-icon">🏆</div>
+            <h3>Благодарность за высокий профессионализм</h3>
+            <p>В системе образования</p>
           </div>
           <div class="achievement-card">
             <div class="achievement-icon">⭐</div>
