--- a/index.html
+++ b/index.html
@@ -375,117 +375,22 @@
           <h2 class="section-title">Отзывы родителей</h2>
           <div class="title-underline"></div>
         </div>
-        <div class="reviews-grid">
-          <div class="review-card">
-            <div class="review-header">
-              <div class="review-icon">👨‍👩‍👧‍👦</div>
-              <div class="review-author">
-                <h4>Родители группы «Солнышко»</h4>
-                <span class="review-date">2024</span>
-              </div>
-            </div>
-            <div class="review-content">
-              <p>Хочу выразить огромную благодарность нашему воспитателю Олесе Вячеславовне! За год работы с детьми она стала для нас не просто педагогом, а настоящим другом и помощником. Особенно хочется отметить её индивидуальный подход к каждому ребёнку.</p>
-            </div>
-            <div class="review-stars">⭐⭐⭐⭐⭐</div>
-          </div>
+        
+        <!-- Кнопка для оставления отзыва -->
+        <div class="review-action">
+          <a href="https://forms.gle/tj6cfV8XrdoWX7ZEA" target="_blank" class="btn btn-primary review-btn">
+            <span class="btn-icon">✍️</span>
+            Оставить отзыв
+          </a>
+          <p class="review-hint">Мы будем рады вашему мнению!</p>
+        </div>
 
-          <div class="review-card">
-            <div class="review-header">
-              <div class="review-icon">👩</div>
-              <div class="review-author">
-                <h4>Смирнова А.П.</h4>
-                <span class="review-date">2024</span>
-              </div>
-            </div>
-            <div class="review-content">
-              <p>Мой сын ходит в детский сад уже второй год, и я очень рада, что именно Олеся Вячеславовна стала его воспитателем. Она всегда внимательна к детям, умеет найти подход к каждому. Особенно впечатлило, как она организует творческие занятия и праздники.</p>
-            </div>
-            <div class="review-stars">⭐⭐⭐⭐⭐</div>
-          </div>
-
-          <div class="review-card">
-            <div class="review-header">
-              <div class="review-icon">👨‍👩‍👧‍👦</div>
-              <div class="review-author">
-                <h4>Семья Ивановых</h4>
-                <span class="review-date">2024</span>
-              </div>
-            </div>
-            <div class="review-content">
-              <p>Благодарим Олесю Вячеславовну за профессионализм и заботу о детях! Наши двойняшки с удовольствием ходят в сад, рассказывают о занятиях и играх. Видно, что воспитатель вкладывает душу в свою работу.</p>
-            </div>
-            <div class="review-stars">⭐⭐⭐⭐⭐</div>
-          </div>
-
-          <div class="review-card">
-            <div class="review-header">
-              <div class="review-icon">👩</div>
-              <div class="review-author">
-                <h4>Петрова Мария</h4>
-                <span class="review-date">2023</span>
-              </div>
-            </div>
-            <div class="review-content">
-              <p>Как родитель, хочу отметить высокий уровень педагогической подготовки Олеси Вячеславовны. Она не только проводит интересные занятия, но и всегда готова выслушать наши пожелания и ответить на вопросы. Дети под её руководством научились дружить и уважать друг друга.</p>
-            </div>
-            <div class="review-stars">⭐⭐⭐⭐⭐</div>
-          </div>
-
-          <div class="review-card">
-            <div class="review-header">
-              <div class="review-icon">👥</div>
-              <div class="review-author">
-                <h4>Родители средней группы</h4>
-                <span class="review-date">2023</span>
-              </div>
-            </div>
-            <div class="review-content">
-              <p>Олеся Вячеславовна — настоящий профессионал своего дела! Её занятия всегда продуманы до мелочей, а подход к детям вызывает только восхищение. Особенно хочется отметить её умение создавать тёплую, доверительную атмосферу в группе.</p>
-            </div>
-            <div class="review-stars">⭐⭐⭐⭐⭐</div>
-          </div>
-
-          <div class="review-card">
-            <div class="review-header">
-              <div class="review-icon">👩</div>
-              <div class="review-author">
-                <h4>Васильева Елена</h4>
-                <span class="review-date">2023</span>
-              </div>
-            </div>
-            <div class="review-content">
-              <p>Спасибо за то, что помогаете нашим детям расти и развиваться! Олеся Вячеславовна всегда находит время для каждого ребёнка, помогает им преодолевать трудности и раскрывать таланты. Наши дети с нетерпением ждут каждое утро, чтобы пойти в сад.</p>
-            </div>
-            <div class="review-stars">⭐⭐⭐⭐⭐</div>
-          </div>
-
-          <div class="review-card">
-            <div class="review-header">
-              <div class="review-icon">📋</div>
-              <div class="review-author">
-                <h4>Родительский комитет</h4>
-                <span class="review-date">2024</span>
-              </div>
-            </div>
-            <div class="review-content">
-              <p>Выражаем искреннюю признательность Олесе Вячеславовне за её труд, терпение и любовь к детям. Благодаря её стараниям наша группа стала настоящей семьёй, где каждый ребёнок чувствует себя защищённым и любимым.</p>
-            </div>
-            <div class="review-stars">⭐⭐⭐⭐⭐</div>
-          </div>
-
-          <div class="review-card">
-            <div class="review-header">
-              <div class="review-icon">👨‍👩‍👧</div>
-              <div class="review-author">
-                <h4>Семья Кузнецовых</h4>
-                <span class="review-date">2024</span>
-              </div>
-            </div>
-            <div class="review-content">
-              <p>Олеся Вячеславовна — замечательный воспитатель! Она умеет сочетать строгость и доброту, что очень важно для правильного воспитания. Наши дети научились многому благодаря её стараниям и профессионализму.</p>
-            </div>
-            <div class="review-stars">⭐⭐⭐⭐⭐</div>
+        <!-- Отзывы из Google Sheets (отображаются как карточки) -->
+        <div class="reviews-grid" id="reviewsGrid">
+          <!-- Отзывы загружаются автоматически из Google Sheets -->
+          <div class="reviews-loading">
+            <div class="loading-spinner"></div>
+            <p>Загрузка отзывов...</p>
           </div>
         </div>
       </div>
