edit пару моментов

--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
               <div class="contact-details">
                 <h3>Местоположение</h3>
                 <p>
-                    переулок Солнечный д., 6 Дальнее Константин<br />Нижегородская
+                    переулок Солнечный д., 6 Дальнее-Константиново<br />Нижегородская
                   область
                 </p>
               </div>
