--- a/index.html
+++ b/index.html
@@ -221,13 +221,22 @@
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
-              <div class="timeline-icon">👩‍🏫</div>
-              <h3>Опыт работы</h3>
-              <p class="timeline-date">2018 - настоящее время</p>
+              <div class="timeline-icon">🌞</div>
+              <h3>Воспитатель в МАДОУ детский сад «Солнышко»</h3>
+              <p class="timeline-date">2020 — 2023</p>
               <p>
-                Воспитатель в детском саду "Колосок" Рабочего поселка
-                Дальнее-Константиново. Работа с детьми разных возрастных групп,
-                организация развивающих занятий, праздников и мероприятий.
+                Работа с детьми разных возрастных групп, организация развивающих занятий, праздников и мероприятий. Рабочий поселок Дальнее-Константиново.
+              </p>
+            </div>
+          </div>
+          <div class="timeline-item">
+            <div class="timeline-dot"></div>
+            <div class="timeline-content">
+              <div class="timeline-icon">🌾</div>
+              <h3>Воспитатель в МАДОУ детский сад «Колосок»</h3>
+              <p class="timeline-date">2023 — настоящее время</p>
+              <p>
+                Работа с детьми разных возрастных групп, организация развивающих занятий, праздников и мероприятий. Рабочий поселок Дальнее-Константиново.
               </p>
             </div>
           </div>
