add new photo+file

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
             <div class="stat-item">
               <div class="stat-number" data-target="50">0</div>
-              <div class="stat-label">выпускников</div>
+              <div class="stat-label">счастливых глазок</div>
             </div>
             <div class="stat-item">
               <div class="stat-number" data-target="100">0</div>
