--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <li><a href="#achievements" class="nav-link">Достижения</a></li>
             <li><a href="#reviews" class="nav-link">Отзывы</a></li>
             <li><a href="#contact" class="nav-link">Контакты</a></li>
+            <li><a href="/info.html" class="nav-link">Информация</a></li>
           </ul>
           <button class="menu-toggle" id="menuToggle">
             <span></span>
