--- a/index.html
+++ b/index.html
@@ -133,8 +133,9 @@
               <div class="stat-label">лет опыта</div>
             </div>
             <div class="stat-item">
+              <div class="stat-label">более</div>
               <div class="stat-number" data-target="50">0</div>
-              <div class="stat-label">счастливых глазок</div>
+              <div class="stat-label">счастливых детей</div>
             </div>
             <div class="stat-item">
               <div class="stat-number" data-target="100">0</div>
